--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,6 @@ __pycache__/
 
 # Distribution / packaging
 .Python
-build/
 develop-eggs/
 dist/
 downloads/
@@ -102,3 +101,5 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+/resources/build/scripts/docker.io.auth
+/resources/build/.app/
